[gd_scene load_steps=5 format=3 uid="uid://blnqrmfnj2ko8"]

[ext_resource type="Script" uid="uid://ce0j2rxxhsci4" path="res://Sprites/Teleporter/Teleporter.gd" id="1_gq1br"]
[ext_resource type="Texture2D" uid="uid://djxip0jsx0nnl" path="res://Sprites/Teleporter/Graphics/TeeleporterOn.png" id="2_hj3kf"]
[ext_resource type="Script" uid="uid://b8gxlgufxnb0y" path="res://Sprites/Teleporter/TeleporterSprite.gd" id="3_28sk7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eumkw"]
radius = 20.0

[node name="Teleporter" type="Area2D"]
script = ExtResource("1_gq1br")

[node name="TeleporterSprite" type="Sprite2D" parent="."]
position = Vector2(3, 1)
scale = Vector2(0.0866667, 0.0866667)
texture = ExtResource("2_hj3kf")
script = ExtResource("3_28sk7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_eumkw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
